EZ-1002 html poc fix pagination positioning

--- a/wui/static/gradetablepoc.html
+++ b/wui/static/gradetablepoc.html
@@ -40,57 +40,59 @@
 
     <div class="card">
         <div class="card-content">
-            <div class="grade-table-wrap">
+            <div class="grades-wrap">
                 <div class="pre-table-wrap"><div class="pagination-wrap">pagination</div></div>
-                <table class="highlight colored truncated-ex">
-                    <thead><tr>
-                        <th style="min-width: 18rem; width: 18rem;"></th>
-                        <th><a class="wrap uncolored" href="#!"><span class="text">1.1 Bla bla blabla bla bla bla bla</span></a></th>
-                        <th><a class="wrap uncolored" href="#!"><i class="material-icons">arrow_downward</i><span class="text">1.2 Bla bla blabla bla</span></a></th>
-                        <th><a class="wrap uncolored" href="#!"><span class="text">1.3 Bla bla blabla bla bla bla</span></a></th>
-                        <th><a class="wrap uncolored" href="#!"><span class="text">1.4 Bla bla blabla</span></a></th>
-                        <th><a class="wrap uncolored" href="#!"><span class="text">1.4 Bla bla blabla bla bla</span></a></th>
-                        <th><a class="wrap uncolored" href="#!"><span class="text">1.4 Bla bla blabla bla</span></a></th>
-                        <th><a class="wrap uncolored" href="#!"><span class="text">1.4 Bla bla blabla bla</span></a></th>
-                        <th><a class="wrap uncolored" href="#!"><span class="text">1.4 Bla bla blabla bla</span></a></th>
-                    </tr></thead>
+                <div class="grade-table-wrap">
+                    <table class="highlight colored truncated-ex">
+                        <thead><tr>
+                            <th style="min-width: 18rem; width: 18rem;"></th>
+                            <th><a class="wrap uncolored" href="#!"><span class="text">1.1 Bla bla blabla bla bla bla bla</span></a></th>
+                            <th><a class="wrap uncolored" href="#!"><i class="material-icons">arrow_downward</i><span class="text">1.2 Bla bla blabla bla</span></a></th>
+                            <th><a class="wrap uncolored" href="#!"><span class="text">1.3 Bla bla blabla bla bla bla</span></a></th>
+                            <th><a class="wrap uncolored" href="#!"><span class="text">1.4 Bla bla blabla</span></a></th>
+                            <th><a class="wrap uncolored" href="#!"><span class="text">1.4 Bla bla blabla bla bla</span></a></th>
+                            <th><a class="wrap uncolored" href="#!"><span class="text">1.4 Bla bla blabla bla</span></a></th>
+                            <th><a class="wrap uncolored" href="#!"><span class="text">1.4 Bla bla blabla bla</span></a></th>
+                            <th><a class="wrap uncolored" href="#!"><span class="text">1.4 Bla bla blabla bla</span></a></th>
+                        </tr></thead>
 
-                    <tbody>
-                    <tr>
-                        <td class="student truncate">Kuslap Ants-Mets Kuusik</td>
-                        <td class="finished">100</td>
-                        <td class="unfinished">0</td>
-                        <td class="unstarted">-</td>
-                        <td class="ungraded">⋯</td>
-                        <td>100</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                    </tr>
-                    <tr>
-                        <td class="student truncate">Mari Maasikas</td>
-                        <td>0</td>
-                        <td>99</td>
-                        <td>100</td>
-                        <td>11</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                    </tr>
-                    <tr>
-                        <td class="student truncate">Jüri-Jaanus Juurikas</td>
-                        <td>100</td>
-                        <td>99</td>
-                        <td>100</td>
-                        <td>100</td>
-                        <td>100</td>
-                        <td>100</td>
-                        <td>100</td>
-                        <td>100</td>
-                    </tr>
-                    </tbody>
-                </table>
+                        <tbody>
+                        <tr>
+                            <td class="student truncate">Kuslap Ants-Mets Kuusik</td>
+                            <td class="finished">100</td>
+                            <td class="unfinished">0</td>
+                            <td class="unstarted">-</td>
+                            <td class="ungraded">⋯</td>
+                            <td>100</td>
+                            <td>0</td>
+                            <td>0</td>
+                            <td>0</td>
+                        </tr>
+                        <tr>
+                            <td class="student truncate">Mari Maasikas</td>
+                            <td>0</td>
+                            <td>99</td>
+                            <td>100</td>
+                            <td>11</td>
+                            <td>0</td>
+                            <td>0</td>
+                            <td>0</td>
+                            <td>0</td>
+                        </tr>
+                        <tr>
+                            <td class="student truncate">Jüri-Jaanus Juurikas</td>
+                            <td>100</td>
+                            <td>99</td>
+                            <td>100</td>
+                            <td>100</td>
+                            <td>100</td>
+                            <td>100</td>
+                            <td>100</td>
+                            <td>100</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
                 <div class="post-table-wrap"><div class="pagination-wrap">pagination</div></div>
             </div>
         </div>
@@ -106,8 +108,8 @@
         overflow-x: auto;
     }
 
-    .grade-table-wrap .pre-table-wrap,
-    .grade-table-wrap .post-table-wrap {
+    .grades-wrap .pre-table-wrap,
+    .grades-wrap .post-table-wrap {
         display: flex;
         justify-content: flex-end;
     }
