--- a/wui/static/gradetablepoc.html
+++ b/wui/static/gradetablepoc.html
@@ -45,7 +45,7 @@
                 <div class="grade-table-wrap">
                     <table class="highlight colored truncated-ex">
                         <thead><tr>
-                            <th style="min-width: 18rem; width: 18rem;"></th>
+                            <th class="header-spacer"></th>
                             <th><a class="wrap uncolored" href="#!"><span class="text">1.1 Bla bla blabla bla bla bla bla</span></a></th>
                             <th><a class="wrap uncolored" href="#!"><i class="material-icons">arrow_downward</i><span class="text">1.2 Bla bla blabla bla</span></a></th>
                             <th><a class="wrap uncolored" href="#!"><span class="text">1.3 Bla bla blabla bla bla bla</span></a></th>
@@ -120,6 +120,10 @@
 
     .grade-table-wrap table > thead > tr > th {
         font-weight: 500;
+    }
+    .grade-table-wrap table > thead > tr > th.header-spacer {
+        min-width: 18rem;
+        width: 18rem;
     }
 
     .grade-table-wrap table.truncated-ex > thead > tr > th .wrap {
