--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -676,6 +676,8 @@
 <script src="https://cdn.jsdelivr.net/npm/codemirror-asciidoc@1.0.4/lib/asciidoc.min.js"></script>
 <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.16.2/build/styles/default.min.css">
 <script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.16.2/build/highlight.min.js"></script>
+<script>MathJax = {options: {renderActions: {addMenu: [0, '', '']}}};</script>
+<script id="MathJax-script" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 <script src="/static/js/kotlin.js"></script>
 <script src="/static/js/kotlinx-coroutines-core.js"></script>
 <script src="/static/js/kotlinx-serialization-kotlinx-serialization-runtime.js "></script>
