EZ-1030 preview is not in a card

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -658,8 +658,10 @@
         <textarea id="text-adoc"></textarea>
     </div>
     <div id="status"></div>
-    <div id="exercise-text">
-        <div id="text-preview" style="border: 1px solid #ccc"></div>
+    <div class="card">
+        <div class="card-content">
+            <div id="exercise-text"></div>
+        </div>
     </div>
     <div class="editor-wrapper no-cursor">
         <textarea id="text-html"></textarea>
