--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -748,7 +748,7 @@
 <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.16.2/build/styles/idea.min.css">
 <script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.16.2/build/highlight.min.js"></script>
 <script>MathJax = {options: {renderActions: {addMenu: [0, '', '']}}};</script>
-<script id="MathJax-script" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+<script id="MathJax-script" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
 
 <script src="/static/js/kotlin.js"></script>
 <script src="/static/js/kotlinx-coroutines-core.js"></script>
