wui participants page teacher groups <th> -> <td>

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -592,7 +592,7 @@
                         <td>{{name}}</td>
                         <td>{{username}}</td>
                         <td>{{email}}</td>
-                        <th>{{#group}}{{group}}{{/group}}{{^group}}-{{/group}}</th>
+                        <td>{{#group}}{{group}}{{/group}}{{^group}}-{{/group}}</td>
                     </tr>
                     {{/teachers}}
                     </tbody>
