--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -604,6 +604,7 @@
 
         {{#isMoodleSynced}}
             <p class="subheading-item"><span class="subheading">{{moodleShortnameLabel}}:</span>{{moodleShortname}}</p>
+            <button id="sync-students-button" class="waves-effect waves-light btn">{{syncStudentsLabel}}</button>
         {{/isMoodleSynced}}
         {{^isMoodleSynced}}
             <a id="add-students-link" class="toggle-link" href="#!">{{{addStudentsLink}}}</a>
